downloaded and set bootstrap files for offline use. Website speed would increase. Initial setup completed

--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
         }
         </script>
 
-    <!-- bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- own css -->
+    <!-- css -->
+     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/resp.css">
     <!-- font awesome -->
@@ -64,11 +62,79 @@
 </head>
 
 <body>
+    <!-- <header>
+        <nav>
+            <img src="" alt="logo" id="logo">
+            <ul>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#">Successful Stories</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <button class="btn">
+                <i class="fa-solid fa-user"></i> Get Job
+            </button>
+        </nav>
+    </header> -->
+
     <header>
+        <!-- topbar starts -->
+        <div class="topbar container-fluid p-2">
+            <div class="row">
+                <div class="topbarContent col-lg-10 col-sm-9 col-8">
+                    <marquee behavior="" direction="left">📢 Welcome to ViMEET TPO Job Portal! | 🎯 Explore the latest
+                        job
+                        opportunities & internships | 🚀 Stay updated on placement drives & company visits | 🔔 Register
+                        now &
+                        kickstart your career!</marquee>
+                </div>
+                <div class="topbarSocial col-lg-2 col-sm-3 col-4 d-flex gap-3 justify-content-center">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- topbar ends -->
+
+        <!-- navbar starts -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Panvel Placement</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span ><i class="fa-solid fa-bars-staggered"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#services">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/testimonials.html">Testimonials</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-warning ms-3" href="/admin.html">Admin Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
     </header>
 
     <main>
+
     </main>
 
     <footer>
@@ -76,9 +142,7 @@
     </footer>
 
     <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <script defer src="/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
