add the registration and testimonial page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Panvel Placement</title>
-    <style>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/resp.css">
+
+    <style>  
         * {
             margin: 0;
             padding: 0;
@@ -195,6 +199,57 @@
     </style>
 </head>
 <body>
+    <header>
+        <!-- topbar starts -->
+        <div class="topbar container-fluid p-2">
+            <div class="row">
+                <div class="topbarContent col-lg-10 col-sm-9 col-9">
+                    <marquee behavior="" direction="left">🎯 New job openings every week — stay updated with Panvel
+                        Placement! | 💼 Top companies hiring: Infosys, Wipro, Accenture, Capgemini & more! | 🚀 200+
+                        successful placements & counting — be our next success story! | 📍 Job listings updated in real
+                        time — no more outdated posts! | 🤝 Partner with us — trusted by colleges & recruiters across
+                        Panvel!</marquee>
+                </div>
+                <div class="topbarSocial col-lg-2 col-sm-3 col-3 d-flex gap-3 justify-content-center">
+                    <a href="https://www.facebook.com/@panvelplacement/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="notVisibleInMob"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com/panvelplacement_panvelarea/"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="notVisibleInMob"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- topbar ends -->
+
+        <!-- navbar starts -->
+        <nav class="navbar navbar-expand-lg sticky-top p-0 m-0">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/navbarLogoWhiteBg-final.jpg" alt="Logo" id="navbarLogo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span><i class="fa-solid fa-bars-staggered"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">Jobs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#services">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/testimonials.html">Testimonials</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact.html">Contact</a>
+                        </li>
+                    </ul>
+                    <button class="btn navBtn"><a href="tel:9324817506">Reach Out</a></button>
+                </div>
+            </div>
+        </nav>
+        <!-- navbar ends -->
+    </header>
+
     <section class="contact-container">
         <div class="contact-header">
             <h1>Contact Us</h1>
@@ -334,6 +389,9 @@
             });
         });
         </script>
+         <script defer src="/assets/js/bootstrap.bundle.min.js"></script>
+
+         <script src="/assets/js/heroSection.js"></script>
         
 </body>
 </html>
