--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/testimonials.html">Testimonials</a>
+                            <a class="nav-link" href="/testimonial.html">Testimonials</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contact.html">Contact</a>
