--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Sidebar -->
-  <div class="sidebar">
+  <div class="sidebar">cd
     <h2>Admin Menu</h2>
     <ul>
       <li><a href="admin-dashboard.html">Dashboard</a></li>
