updated testimonial section heading glitch.. updated chatbot backend dataset.. added styling to floating icons like whatapp, chatbot and bottomToTop

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="jobs.html">Jobs</a>
+                            <a class="nav-link" href="/jobs.html">Jobs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#serviceSection">Services</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#testimonialSection">Testimonials</a>
@@ -123,7 +123,7 @@
                             <a class="nav-link" href="/contact.html">Contact</a>
                         </li>
                     </ul>
-                    <button class="btn navBtn"><a href="tel:9324817506">Reach Out</a></button>
+                    <button class="btn navBtn"><a href="tel:+918425050976">Reach Out</a></button>
                 </div>
             </div>
         </nav>
@@ -380,8 +380,8 @@
 
         <!-- testimonials section -->
         <div class="testimonialSection" id="testimonialSection">
-            <div >
-                <h1 class="section-title">Success Stories</h1>
+            <div>
+                <h1 class=" testimonialHeading">Success Stories</h1>
             </div>
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -698,11 +698,11 @@
         <div class="copyright">
             <p>&copy; <span id="currentYear"></span> Panvel Placement. All rights reserved.</p>
             <br>
-            Developed by <span class="developers">Sumit Kumar </span>
+            Developed by <span class="developers gradient-text">Sumit Kumar </span>
             <a href="mailto:sumitkumar9012004@gmail.com" id="footmail"><i class="fa-regular fa-envelope"></i></a> ,
-            <span class="developers">Abhishek Solanki </span>
+            <span class="developers gradient-text">Abhishek Solanki </span>
             <a href="mailto:solankiwork003@gmail.com" id="footmail"><i class="fa-regular fa-envelope"></i></a> & <span
-                class="developers">Ajay Prasad </span>
+                class="developers gradient-text">Ajay Prasad </span>
             <a href="mailto:ajjjuupd18@gmail.com" id="footmail"><i class="fa-regular fa-envelope"></i></a>
         </div>
 
@@ -723,7 +723,7 @@
     <a href="#" class="scroll-to-top"><i class="fa-solid fa-angles-up"></i></a>
     <!-- <a href="#" class="AiChatBot" aria-label="Chat with AI to find your related study stuff and info quickly">
               </a> -->
-    <a href="https://chat.whatsapp.com/Le6oX6uH8ym7RW5MYTsYej" target="_blank" class="whatsappButton"
+    <a href="https://wa.link/n4jirl" target="_blank" class="whatsappButton"
         aria-label="Join our WhatsApp Group">
         <i class="fab fa-whatsapp"></i>
     </a>
