updated contact form on index page.. but the data is nnot being stored, some issues in the backend.

--- a/contact.html
+++ b/contact.html
@@ -263,19 +263,20 @@
                 <h3>Contact Information</h3>
                 <div class="info-item">
                     <i>📱</i>
-                    <span>+91 1234 567 890</span>
+                    <span><a href="tel:08425050976">+91 84250 50976</a></span>
                 </div>
                 <div class="info-item">
                     <i>✉️</i>
-                    <span>info@panvelplacement.com</span>
+                    <span><a href="mailto:info@panvelplacement.in">info@panvelplacement.in</a></span>
                 </div>
                 <div class="info-item">
                     <i>🏢</i>
-                    <span>123 Panvel Tech Park, Navi Mumbai, Maharashtra 410206</span>
+                    <span>SHOP NO-18, NK HERITAGE, Railway Station, Forest Colony,
+                        Panvel, Navi Mumbai, Maharashtra 410206</span>
                 </div>
                 <div class="info-item">
                     <i>⏰</i>
-                    <span>Monday - Friday: 9:00 AM - 6:00 PM</span>
+                    <span> Mon - Sat: 9 AM - 8:30 PM</span>
                 </div>
             </div>
             
