--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Panvel Placement</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    
+    <meta name="description"
+        content="Panvel Placement is the best recruitment agency in Navi Mumbai, connecting freshers and experienced professionals with top companies.">
+    <meta name="keywords"
+        content="Panvel Placement, Recruitment Agency, Navi Mumbai Jobs, Job Vacancies, Employment Services">
+    <meta name="author" content="Panvel Placement">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Panvel Placement - Best Recruitment Agency in Navi Mumbai">
+    <meta property="og:description"
+        content="Offering expert job placement services in Panvel, Navi Mumbai since 2018. Find your dream job today!">
+    <meta property="og:image" content="/assets/img/logo/navbarLogo.png">
+    <meta property="og:url" content="https://www.panvelplacement.in">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Panvel Placement">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Google Maps Structured Data -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Panvel Placement",
+            "image": "https://www.panvelplacement.in/assets/images/office.jpg",
+            "@id": "https://www.google.com/maps/place/Panvel+Placement/",
+            "url": "https://www.panvelplacement.in",
+            "telephone": "+91 84250 50976",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "SHOP NO-18, NK HERITAGE, Railway Station, Forest Colony",
+                "addressLocality": "Panvel",
+                "addressRegion": "Navi Mumbai",
+                "postalCode": "410206",
+                "addressCountry": "IN"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": "18.988244",
+                "longitude": "73.107414"
+            },
+            "openingHours": "Mo-Sa 09:00-20:30",
+            "sameAs": [
+                "https://www.facebook.com/PanvelPlacement",
+                "https://www.linkedin.com/company/panvel-placement"
+            ]
+        }
+        </script>
+
+    <!-- bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
+    <!-- css -->
+    <link rel="stylesheet" href="/assets/css/main.min.per.css">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/resp.css">
 
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/7ab50d13be.js" crossorigin="anonymous"></script>
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+
+</head>
     <style>  
         * {
             margin: 0;
