--- a/contact.html
+++ b/contact.html
@@ -254,6 +254,10 @@
             animation: fadeIn 0.8s ease forwards;
         }
 
+        a{
+            text-decoration: none;
+            color: #ffffff;
+        }
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .contact-wrapper {
