updated registration page css

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Sidebar -->
-  <div class="sidebar">cd
+  <div class="sidebar">
     <h2>Admin Menu</h2>
     <ul>
       <li><a href="admin-dashboard.html">Dashboard</a></li>
@@ -22,7 +22,7 @@
   <div class="main-content">
     <!-- Top Header -->
     <div class="header">
-      <h1>Welcome, Admin</h1>
+      <h1>Welcome, Akshay Sir</h1>
     </div>
 
     <!-- Dashboard Overview -->
