updated css of login page

--- a/admin-login.html
+++ b/admin-login.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Login</title>
   <link rel="stylesheet" href="assets/css/admin-login.css" />
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
   <div class="login-container">
-    <h2>Admin Login</h2>
+    <h2 class="gradient-text">Admin Login</h2>
     <form id="adminLoginForm">
       <input type="text" id="username" placeholder="Username" required />
       <input type="password" id="password" placeholder="Password" required />
