--- a/candidates.html
+++ b/candidates.html
@@ -62,7 +62,9 @@
         <td>${app.course}</td>
         <td>${app.email}</td>
         <td>${app.phone}</td>
-        <td><a href="/uploads/${app.resumePath}" target="_blank">View Resume</a></td>
+       <td><a href="/assets${app.resumePath}" target="_blank">View Resume</a></td>
+
+
         <td>${app.status || "Pending"}</td>
         <td>
           <select onchange="updateStatus('${app._id}', this.value)">
