--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -8,8 +8,62 @@
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
+    /* Sidebar Styles */
+.sidebar {
+  width: 250px;
+  background: #2c3e50;
+  color: white;
+  height: 100vh;
+  position: fixed;
+  padding: 20px;
+  transition: transform 0.3s ease;
+  z-index: 1000;
+}
+
+.sidebar h2 {
+  color: white;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.3rem;
+}
+
+.sidebar ul {
+  list-style: none;
+}
+
+.sidebar li {
+  margin-bottom: 15px;
+}
+
+.sidebar a {
+  color: #ecf0f1;
+  text-decoration: none;
+  display: block;
+  padding: 8px 10px;
+  border-radius: 4px;
+  transition: background 0.3s;
+}
+
+.sidebar a:hover {
+  background: #34495e;
+}
+
+/* Hamburger Menu */
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+  padding: 15px;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1001;
+  background: #2c3e50;
+  color: white;
+  border-radius: 4px;
+  border: none;
+}
     /* Hamburger Menu Styles - Added without changing existing styles */
-    .menu-toggle {
+    /* .menu-toggle {
       display: none;
       cursor: pointer;
       padding: 15px;
@@ -21,7 +75,7 @@
       color: white;
       border-radius: 4px;
       border: none;
-    }
+    } */
     
     /* Responsive Sidebar - Added without changing existing sidebar styles */
     @media (max-width: 768px) {
