--- a/admin-job.html
+++ b/admin-job.html
@@ -1,7 +1,3 @@
-
-
- 
-    
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,6 +23,10 @@
     <!-- Top Header -->
     <div class="header">
       <h1>Manage Jobs</h1>
+
+      <div class="header-actions">
+        <input type="text" id="searchCompanyInput" placeholder="Search by Company Name..." />
+        
       <div class="header-buttons">
         <!-- Add Job Form -->
         <button id="addJobBtn">Add Job</button>
@@ -73,5 +73,7 @@
       </div>
 
   <script src="assets/js/admin-jobs.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
 </body>
 </html>
