--- a/admin-job.html
+++ b/admin-job.html
@@ -11,6 +11,12 @@
   <link rel="stylesheet" href="/assets/css/admin-jobs.css" />
 </head>
 <body>
+
+    <!-- Hamburger Menu Toggle -->
+    <button class="menu-toggle" id="menuToggle">
+      <i class="fas fa-bars"></i>
+    </button>
+    
   <!-- Sidebar -->
   <div class="sidebar">
     <h2>Admin Menu</h2>
@@ -36,6 +42,7 @@
         <button id="addJobBtn">Add Job</button>
         <button id="exportBtn">Export to Excel</button>
       </div>
+    </div>
     </div>
 
     <!-- Jobs Table -->
